--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <body>
     <img src="images/serveri.jpeg" style="width: 120px;height: 100px">
     <a href="https://profizgl.lu.lv/mod/book/view.php?id=22319&chapterid=6880">Informācijas avots.</a>
+    <a href="http://localhost:8383/TestWeb/skola.html">skola.html</a>
+    <a href="http://localhost:8383/TestWeb/baiti.html">baiti.html</a>
         <h1>Lokālais tīkls(LAN)</h1>
         <ul>
             <li>Tas ir izvietots nelielā teritorijā.</li>
